// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch focus state only shows focus feedback for keyboard focus on web: keyboard focus 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "outline": "none",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.1,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": 16,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 24,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 12,
    "transform": [
      {
        "translateX": 24,
      },
    ],
    "width": 24,
  },
  {
    "backgroundColor": "rgba(234, 221, 255, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 1,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch focus state renders keyboard focus feedback when value is false and clears it on blur: focused 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(230, 224, 233, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "borderColor": "rgba(121, 116, 126, 1)",
    "borderRadius": 9999,
    "borderWidth": 2,
    "bottom": 0,
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "backgroundColor": "rgba(29, 27, 32, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.1,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": -4,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 16,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 16,
    "transform": [
      {
        "translateX": 8,
      },
    ],
    "width": 16,
  },
  {
    "backgroundColor": "rgba(73, 69, 79, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 1,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch focus state renders keyboard focus feedback when value is true and clears it on blur: focused 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.1,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": 16,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 24,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 12,
    "transform": [
      {
        "translateX": 24,
      },
    ],
    "width": 24,
  },
  {
    "backgroundColor": "rgba(234, 221, 255, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 1,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch press feedback grows immediately when value is false and returns to rest on release: early press 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(230, 224, 233, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "borderColor": "rgba(121, 116, 126, 1)",
    "borderRadius": 9999,
    "borderWidth": 2,
    "bottom": 0,
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "backgroundColor": "rgba(29, 27, 32, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.012550532338511944,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": -4,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 19.31374049870675,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 14.343129750646625,
    "transform": [
      {
        "translateX": 6.343129750646625,
      },
    ],
    "width": 19.31374049870675,
  },
  {
    "backgroundColor": "rgba(73, 69, 79, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch press feedback grows immediately when value is false and returns to rest on release: held press 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(230, 224, 233, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "borderColor": "rgba(121, 116, 126, 1)",
    "borderRadius": 9999,
    "borderWidth": 2,
    "bottom": 0,
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "backgroundColor": "rgba(29, 27, 32, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.1,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": -4,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 28,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 10,
    "transform": [
      {
        "translateX": 2,
      },
    ],
    "width": 28,
  },
  {
    "backgroundColor": "rgba(73, 69, 79, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch press feedback grows immediately when value is true and returns to rest on release: early press 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.012550532338511944,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": 16,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 25.104580166235582,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 11.447709916882209,
    "transform": [
      {
        "translateX": 23.44770991688221,
      },
    ],
    "width": 25.104580166235582,
  },
  {
    "backgroundColor": "rgba(234, 221, 255, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch press feedback grows immediately when value is true and returns to rest on release: held press 1`] = `
[
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "overflow": "visible",
    "width": 52,
  },
  {
    "alignItems": "center",
    "height": 48,
    "justifyContent": "center",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 32,
    "opacity": 1,
    "overflow": "visible",
    "width": 52,
  },
  {
    "backgroundColor": "rgba(103, 80, 164, 1)",
    "borderRadius": 9999,
    "height": 40,
    "left": 0,
    "opacity": 0.1,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 4,
    "transform": [
      {
        "translateX": 16,
      },
    ],
    "width": 40,
  },
  {
    "alignItems": "center",
    "height": 28,
    "justifyContent": "center",
    "left": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 10,
    "transform": [
      {
        "translateX": 22,
      },
    ],
    "width": 28,
  },
  {
    "backgroundColor": "rgba(234, 221, 255, 1)",
    "borderRadius": 9999,
    "bottom": 0,
    "left": 0,
    "opacity": 1,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  {
    "borderColor": "rgba(98, 91, 113, 1)",
    "borderRadius": 9999,
    "borderWidth": 3,
    "bottom": 3,
    "left": -5,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": -5,
    "top": 3,
  },
]
`;

exports[`Switch render renders disabled off 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 48,
        "justifyContent": "center",
        "overflow": "visible",
        "width": 52,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": false,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="switch"
    style={
      [
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 52,
        },
        undefined,
      ]
    }
    tabIndex={-1}
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 32,
            "overflow": "visible",
            "width": 52,
          },
          {
            "backgroundColor": "rgba(230, 224, 233, 1)",
            "opacity": 0.12,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 9999,
              "borderWidth": 2,
              "bottom": 0,
              "left": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderColor": "rgba(29, 27, 32, 1)",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 9999,
          "height": 40,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 4,
          "width": 40,
        },
        {
          "left": 0,
        },
        {
          "backgroundColor": "rgba(29, 27, 32, 1)",
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": -4,
            },
          ],
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "left": 0,
        },
        {
          "height": 16,
          "top": 16,
          "transform": [
            {
              "translateX": 8,
            },
          ],
          "width": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "rgba(254, 247, 255, 1)",
          },
        ]
      }
    />
    <View
      collapsable={false}
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0.38,
          },
          {
            "backgroundColor": "rgba(29, 27, 32, 1)",
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 9999,
          "borderWidth": 3,
          "bottom": 3,
          "left": -5,
          "right": -5,
          "top": 3,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Switch render renders disabled on 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 48,
        "justifyContent": "center",
        "overflow": "visible",
        "width": 52,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": true,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="switch"
    style={
      [
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 52,
        },
        undefined,
      ]
    }
    tabIndex={-1}
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 32,
            "overflow": "visible",
            "width": 52,
          },
          {
            "backgroundColor": "rgba(29, 27, 32, 1)",
            "opacity": 0.12,
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 9999,
          "height": 40,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 4,
          "width": 40,
        },
        {
          "left": 0,
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 16,
            },
          ],
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "left": 0,
        },
        {
          "height": 24,
          "top": 12,
          "transform": [
            {
              "translateX": 24,
            },
          ],
          "width": 24,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "rgba(254, 247, 255, 1)",
          },
        ]
      }
    />
    <View
      collapsable={false}
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "rgba(254, 247, 255, 1)",
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 9999,
          "borderWidth": 3,
          "bottom": 3,
          "left": -5,
          "right": -5,
          "top": 3,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Switch render renders off 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 48,
        "justifyContent": "center",
        "overflow": "visible",
        "width": 52,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": false,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="switch"
    style={
      [
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 52,
        },
        undefined,
      ]
    }
    tabIndex={0}
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 32,
            "overflow": "visible",
            "width": 52,
          },
          {
            "backgroundColor": "rgba(230, 224, 233, 1)",
            "opacity": 1,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 9999,
              "borderWidth": 2,
              "bottom": 0,
              "left": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderColor": "rgba(121, 116, 126, 1)",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 9999,
          "height": 40,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 4,
          "width": 40,
        },
        {
          "left": 0,
        },
        {
          "backgroundColor": "rgba(29, 27, 32, 1)",
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": -4,
            },
          ],
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "left": 0,
        },
        {
          "height": 16,
          "top": 16,
          "transform": [
            {
              "translateX": 8,
            },
          ],
          "width": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "rgba(121, 116, 126, 1)",
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 9999,
          "borderWidth": 3,
          "bottom": 3,
          "left": -5,
          "right": -5,
          "top": 3,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Switch render renders on 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 48,
        "justifyContent": "center",
        "overflow": "visible",
        "width": 52,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": true,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="switch"
    style={
      [
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 52,
        },
        undefined,
      ]
    }
    tabIndex={0}
    testID="switch"
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 32,
            "overflow": "visible",
            "width": 52,
          },
          {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "opacity": 1,
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 9999,
          "height": 40,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 4,
          "width": 40,
        },
        {
          "left": 0,
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 16,
            },
          ],
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "left": 0,
        },
        {
          "height": 24,
          "top": 12,
          "transform": [
            {
              "translateX": 24,
            },
          ],
          "width": 24,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 1)",
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 9999,
          "borderWidth": 3,
          "bottom": 3,
          "left": -5,
          "right": -5,
          "top": 3,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Switch render renders with checked icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 48,
        "justifyContent": "center",
        "overflow": "visible",
        "width": 52,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": true,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="switch"
    style={
      [
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 52,
        },
        undefined,
      ]
    }
    tabIndex={0}
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 32,
            "overflow": "visible",
            "width": 52,
          },
          {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "opacity": 1,
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 9999,
          "height": 40,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 4,
          "width": 40,
        },
        {
          "left": 0,
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 16,
            },
          ],
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "left": 0,
        },
        {
          "height": 24,
          "top": 12,
          "transform": [
            {
              "translateX": 24,
            },
          ],
          "width": 24,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 1)",
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "height": 16,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 16,
          "width": 16,
        },
        {
          "left": 0,
        },
        {
          "transform": [
            {
              "translateX": 28,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(33, 0, 93, 1)",
              "fontSize": 16,
            },
            [
              {
                "lineHeight": 16,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        check
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 9999,
          "borderWidth": 3,
          "bottom": 3,
          "left": -5,
          "right": -5,
          "top": 3,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Switch render renders with per-state icons 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 48,
        "justifyContent": "center",
        "overflow": "visible",
        "width": 52,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": true,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="switch"
    style={
      [
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 52,
        },
        undefined,
      ]
    }
    tabIndex={0}
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
            "height": 32,
            "overflow": "visible",
            "width": 52,
          },
          {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "opacity": 1,
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 9999,
          "height": 40,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 4,
          "width": 40,
        },
        {
          "left": 0,
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 16,
            },
          ],
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "left": 0,
        },
        {
          "height": 24,
          "top": 12,
          "transform": [
            {
              "translateX": 24,
            },
          ],
          "width": 24,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "borderRadius": 9999,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 1)",
          },
        ]
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "height": 16,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 16,
          "width": 16,
        },
        {
          "left": 0,
        },
        {
          "transform": [
            {
              "translateX": 28,
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(33, 0, 93, 1)",
              "fontSize": 16,
            },
            [
              {
                "lineHeight": 16,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        check
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "pointerEvents": "none",
          "position": "absolute",
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 9999,
          "borderWidth": 3,
          "bottom": 3,
          "left": -5,
          "right": -5,
          "top": 3,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;
